Fix card art being cropped at the top

--- a/app/scripts/src/less/ui/replay/rendered-card.less
+++ b/app/scripts/src/less/ui/replay/rendered-card.less
@@ -15,7 +15,7 @@
 	}
 
 	&.minion .art {
-		clip-path: ellipse(37% 37% at 52% 49%);
+		clip-path: ellipse(40% 45% at 52% 49%);
 	}
 
 	&.spell .art {
